--- a/scripts/pages/calculoPorcentage.html
+++ b/scripts/pages/calculoPorcentage.html
@@ -10,7 +10,7 @@
 
 <body>-->
 
-	<div id="contenedor" ng-controller="appController as ctrl" 
+	<div id="contenedor2" ng-controller="calculoController as ctrl" 
 	style="border: 1px solid rgba(0,0,0,0.12); width: 25rem;">
 
 	<div id="contenedor" style="border: 1px solid rgba(0,0,0,0.12); width: 25rem;">	
