--- a/scripts/pages/listaMarcas.html
+++ b/scripts/pages/listaMarcas.html
@@ -1,7 +1,16 @@
 
         <h3>{{nombre_listado}}</h3>
-        <ul>
-            <li>60m - 6.35</li>
-            <li>100m - 10.94</li>
-            <li>200m - 20.32</li>                                
-        </ul>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Prueba</th>
+					<th>Mejor marca</th>
+				</tr>
+			</thead>			
+			<tbody>			
+				<tr ng-repeat="marca in ctrl.marcas">
+					<td>{{marca.sex}}</td>
+					<td>{{marca.age}}</td>				
+				</tr>		
+			<tbody>
+		</table>
