--- a/Index.html
+++ b/Index.html
@@ -14,24 +14,42 @@
 
 <body>
 
-    <div id="contenedor" class="contenedor">
-		<div class="row">
-		<div class="col-md-3" style=" display: block; margin: 0 auto; width: 25rem;">
-			<ul class="nav" style="text-align: center; padding: 0;">				
-				<md-button class="md-fab" aria-label="Eat cake">
-            		<a href="#calculo"><i class="material-icons" style="color:white; font-size: 37px;line-height: 1.5">directions_run</i></a>					
-        		</md-button>				
-				<md-button class="md-fab" aria-label="Eat cake">
-            		<a href="#listaMarcas"><i class="material-icons" style="color:white; font-size: 37px;line-height: 1.5">list</i></a>					
-        		</md-button>
+	<div id="contenedor2" ng-controller="calculoController as ctrl" 
+	style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 29rem">
+
+	<div id="contenedor">	
+
+		<form name="gestorMarcaForm">
+			<div layout="row" style="width: 20rem; margin-top: 1rem; margin-left: 4.5rem">
+				<md-input-container flex="50">
+					<sexo-atleta sexo="ctrl.model.sexo"></sexo-atleta>
+				</md-input-container>
+				<div layout-gt-xs="row" style="margin-top: 1rem; margin-left: 1rem">
+					<edad-atleta-bind edad="ctrl.model.edad" style="width: 3rem"></edad-atleta-bind>
+				</div>
+			</div>
 				
-			</ul>
-		</div>
-		<div class="col-md-9">
-		  	<div ng-view></div>
-		</div>
-		</div>
-    </div>
+			<div layout="row" style="width: 20rem; margin-left: 4.5rem">
+				<md-input-container flex="50">
+					<tipo-prueba change="ctrl.changeTipoPrueba" tipo="ctrl.model.tipoPrueba"></tipo-prueba>
+				</md-input-container>
+				<md-input-container flex="50">
+					<select-prueba prueba="ctrl.model.prueba" lista="ctrl.lista"></select-prueba>
+				</md-input-container>
+			</div>
+			<div id="elemento" layout="row" style="width: 10rem; margin-left: 7.5rem">
+				<marca-atleta marca="ctrl.model.marca"></marca-atleta>
+			</div>
+			<div id="elemento" layout="row" style="width: 10rem; height: 3rem; display: block; margin: 0 auto; background-color:rgba(0,0,0,0.12);">
+				<label style="width: 4rem; display: block; margin: 0 auto; padding-top: 0.7rem; font-size: 1.5rem;" for="porcentage">{{ ctrl.model.porcentage }}</label></br>
+			</div>	
+			<div layout-gt-xs="row" style="margin: 2rem">
+			    <md-button style="display: block; margin: 0 auto;" class="md-raised md-primary" ng-click="ctrl.getMarca()">Calcular</md-button>
+				</button>
+			</div>																	
+		</form>		
+
+	</div>
 
 </body>
 </html>
