cambio de título de formulario a "Migración Type Script"

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     <div id="contenedor2" ng-controller="calculoController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 29rem">
 
         <div id="contenedor">
-            <h1>{{ctrl.saludo}}</h1>
+            <h1>Migración Type Script</h1>
             <form name="gestorMarcaForm">
                 <div layout="row" style="width: 20rem; margin-top: 1rem; margin-left: 4.5rem">
                     <md-input-container flex="50">
@@ -24,6 +24,7 @@
                     </md-input-container>
                     <div layout-gt-xs="row" style="margin-top: 1rem; margin-left: 1rem">
                         <edad-atleta edad="ctrl.edad" style="width: 3rem"></edad-atleta>
+
                     </div>
                 </div>
 
