--- a/calculo.html
+++ b/calculo.html
@@ -1,62 +1,64 @@
 <div id="calculoContainer" ng-controller="calculoController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 29rem">
 
-    <h1>{{ctrl.saludo}}</h1 <form name="gestorMarcaForm">
-
-    <div style="width: 20rem; margin-top: 1rem; margin-left: 4.5rem;">
-        <div layout="row">
-            <div flex>
-                <sexo-atleta sexo="ctrl.model.sexo"></sexo-atleta>
+    <h1>{{ctrl.saludo}}</h1>
+    <form name="gestorMarcaForm">
+        <div style="width: 20rem; margin-top: 1rem; margin-left: 4.5rem;">
+            <div layout="row">
+                <div flex>
+                    <sexo-atleta sexo="ctrl.model.sexo"></sexo-atleta>
+                </div>
+                <div flex>
+                    <edad-atleta edad="ctrl.model.edad" style="width: 3rem"></edad-atleta>
+                </div>
             </div>
-            <div flex>
-                <edad-atleta edad="ctrl.model.edad" style="width: 3rem"></edad-atleta>
-            </div>
-        </div>
 
-        <div layout="row">
-            <div flex>
-                <md-radio-group ng-model="ctrl.model.tipoPrueba">
+            <div layout="row">
+                <div flex>
+                    <md-radio-group ng-model="ctrl.model.tipoPrueba">
 
-                    <md-radio-button value="carrera"> Carrera </md-radio-button>
-                    <md-radio-button value="concurso"> Concurso </md-radio-button>
+                        <md-radio-button value="carrera"> Carrera </md-radio-button>
+                        <md-radio-button value="concurso"> Concurso </md-radio-button>
 
-                </md-radio-group>
-            </div>
-            <div flex>
-                <md-input-container>
-                    <label>Prueba</label>
-                    <md-select ng-model="ctrl.model.prueba">
-                        <md-option ng-repeat="prueba in ctrl.model.pruebas | tipoPruebaFilter : ctrl.model.tipoPrueba" ng-value="prueba.nombre">
-                            {{prueba.nombre}}
-                        </md-option>
-                    </md-select>
-                </md-input-container>
-            </div>
-        </div>
-
-        <div layout="row">
-            <div flex>
-                <marca-atleta marca="ctrl.model.marca"></marca-atleta>
-            </div>
-        </div>
-    </div>
-    <!--<div layout="row" style="width: 20rem; margin-left: 4.5rem">
-                    <md-input-container flex="50">
-                        <tipo-prueba change="ctrl.changeTipoPrueba" tipo="ctrl.model.tipoPrueba"></tipo-prueba>
-                    </md-input-container>
-                    <md-input-container flex="50">
-                        <select-prueba prueba="ctrl.model.prueba" lista="ctrl.lista"></select-prueba>
+                    </md-radio-group>
+                </div>
+                <div flex>
+                    <md-input-container>
+                        <label>Prueba</label>
+                        <md-select ng-model="ctrl.model.prueba">
+                            <md-option ng-repeat="prueba in ctrl.model.pruebas | tipoPruebaFilter : ctrl.model.tipoPrueba" ng-value="prueba.nombre">
+                                {{prueba.nombre}}
+                            </md-option>
+                        </md-select>
                     </md-input-container>
                 </div>
-                <div id="elemento" layout="row" style="width: 10rem; margin-left: 7.5rem">
+            </div>
+
+            <div layout="row">
+                <div flex>
                     <marca-atleta marca="ctrl.model.marca"></marca-atleta>
                 </div>
-                <div id="elemento" layout="row" style="width: 10rem; height: 3rem; display: block; margin: 0 auto; background-color:rgba(0,0,0,0.12);">
-                    <label style="width: 4rem; display: block; margin: 0 auto; padding-top: 0.7rem; font-size: 1.5rem;" for="porcentage">{{ ctrl.model.porcentage }}</label></br>
-                </div>
-                <div layout-gt-xs="row" style="margin: 2rem">
-                    <md-button style="display: block; margin: 0 auto;" class="md-raised md-primary" ng-click="ctrl.getMarca()">Calcular</md-button>
-                    </button>
-                </div>-->
-    </form>
+            </div>
+        </div>
 
+        <!--
+            <div layout="row" style="width: 20rem; margin-left: 4.5rem">
+                <md-input-container flex="50">
+                    <tipo-prueba change="ctrl.changeTipoPrueba" tipo="ctrl.model.tipoPrueba"></tipo-prueba>
+                </md-input-container>
+                <md-input-container flex="50">
+                    <select-prueba prueba="ctrl.model.prueba" lista="ctrl.lista"></select-prueba>
+                </md-input-container>
+            </div>
+            <div id="elemento" layout="row" style="width: 10rem; margin-left: 7.5rem">
+                <marca-atleta marca="ctrl.model.marca"></marca-atleta>
+            </div>
+            <div id="elemento" layout="row" style="width: 10rem; height: 3rem; display: block; margin: 0 auto; background-color:rgba(0,0,0,0.12);">
+                <label style="width: 4rem; display: block; margin: 0 auto; padding-top: 0.7rem; font-size: 1.5rem;" for="porcentage">{{ ctrl.model.porcentage }}</label></br>
+            </div>
+            <div layout-gt-xs="row" style="margin: 2rem">
+                <md-button style="display: block; margin: 0 auto;" class="md-raised md-primary" ng-click="ctrl.getMarca()">Calcular</md-button>
+                </button>
+            </div>
+        -->
+    </form>
 </div>
