calculoMarcaService - Mejor marca

--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,10 @@
     <div id="contenedor">
 
         <div>
-
-            <a href="#/calculo">Calculo</a>
-            <a href="#/lista">Lista</a>
-
+            <div style="margin: 0 auto; width: 25rem;">
+                <a href="#/calculo">Calculo</a>
+                <a href="#/lista">Lista</a>
+            </div>
             <div id="content" ng-view></div>
 
         </div>
