--- a/lista.html
+++ b/lista.html
@@ -1,4 +1,4 @@
-<div id="listaMarcasContainer" ng-controller="listaMarcasController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 29rem">
+<div id="listaMarcasContainer" ng-controller="listaMarcasController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: auto; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
 
     <h1>Lista de marcas {{ctrl.marcasByEdad[0].sex}}{{ctrl.marcasByEdad[0].age}}</h1>
 
