--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,14 @@
 
         <div>
             <div style="margin: 0 auto; width: 25rem;">
-                <a href="#/calculo">Calculo</a>
-                <a href="#/lista">Lista</a>
+                <md-button class="md-fab" aria-label="Eat cake" href="#/calculo">
+                    <md-icon md-svg-src="img/icons/cake.svg"></md-icon>
+                </md-button>
+                <md-button class="md-fab" aria-label="Eat cake" href="#/lista">
+                    <md-icon md-svg-src="img/icons/cake.svg"></md-icon>
+                </md-button>
+                <!--<a href="#/calculo">Calculo</a>
+                <a href="#/lista">Lista</a>-->
             </div>
             <div id="content" ng-view></div>
 
