--- a/calculo.html
+++ b/calculo.html
@@ -1,4 +1,4 @@
-<div id="calculoContainer" ng-controller="calculoController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 29rem; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
+<div id="calculoContainer" ng-controller="calculoController as ctrl" style="margin: 1rem auto auto auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 31rem; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
 
     <h1>{{ctrl.saludo}}</h1>
     <form name="gestorMarcaForm">
@@ -46,7 +46,8 @@
             </div>
 
             <div layout="row">
-                <div flex></div>
+                <div flex>
+                </div>
                 <div flex>
                     <md-input-container class="md-block">
                         <label>Porcentaje marca</label>
