--- a/calculo.html
+++ b/calculo.html
@@ -55,7 +55,7 @@
                     </md-input-container>
                 </div>
             </div>
-            <div layout="row">
+            <div layout="row" style="text-align: center;">
                 <div flex>
                     <md-button class="md-raised md-primary" ng-click="ctrl.getMejorMarca();">
                         Obtener mejor marca
