--- a/calculo.html
+++ b/calculo.html
@@ -1,6 +1,6 @@
-<div id="calculoContainer" ng-controller="calculoController as ctrl" style="margin: 1rem auto auto auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: 31rem; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
+<div id="calculoContainer" ng-controller="calculoController as ctrl" style="margin: 1rem auto auto auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: auto; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
 
-    <h1>{{ctrl.saludo}}</h1>
+    <h2>{{ctrl.saludo}}</h2>
     <form name="gestorMarcaForm">
         <div style="width: auto; margin-top: 1rem; margin-left: 2.5rem;">
             <div layout="row">
