--- a/scripts/directives/marcaAtleta/marcaTemplate.html
+++ b/scripts/directives/marcaAtleta/marcaTemplate.html
@@ -1,4 +1,4 @@
 <md-input-container class="md-block">
     <label>Marca realizada</label>
-    <input name="marcaAtleta" ng-model="marca" placeholder="Marca realizada" required ng-pattern="/^[1-9][\d+]?[\.\,]?[\d]+?$/">
+    <input name="marcaAtleta" ng-model="marca" placeholder="Marca realizada" required ng-pattern="/^([1-9]([0-9]+)?|0)(\.[0-9]{1,2})?$/">
 </md-input-container>
