Mejoras visualización, nuevos datos, corrección cálculo

--- a/calculo.html
+++ b/calculo.html
@@ -1,6 +1,8 @@
 <div id="calculoContainer" ng-controller="calculoController as ctrl" style="margin: 1rem auto auto auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: auto; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
 
-    <h2>{{ctrl.saludo}}</h2>
+    <div style="text-align:center;">
+        <h2>{{ctrl.saludo}}</h2>
+    </div>
     <form name="gestorMarcaForm">
         <div style="width: auto; margin-top: 1rem; margin-left: 2.5rem;">
             <div layout="row">
