--- a/lista.html
+++ b/lista.html
@@ -1,6 +1,8 @@
-<div id="listaMarcasContainer" ng-controller="listaMarcasController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: auto; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);">
+<div id="listaMarcasContainer" ng-controller="listaMarcasController as ctrl" style="margin: 0 auto; border: 1px solid rgba(0,0,0,0.12); width: 25rem; height: auto; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5); padding-bottom:15px;">
 
-    <h2>Lista de marcas {{ctrl.marcasByEdad[0].sex}}{{ctrl.marcasByEdad[0].age}}</h2>
+    <div style="text-align:center;">
+        <h2>Lista de marcas {{ctrl.marcasByEdad[0].sex}}{{ctrl.marcasByEdad[0].age}}</h2>
+    </div>
     <div flex>
         <div style="width: 20rem; margin-left: 4.5rem">
             <div layout="row" ng-repeat="event in ctrl.marcasByEdad[0].eventos">
